# key-mime-pi-cam

./: .gitignore  README.md  enable-usb-hid  pyproject.toml  requirements.txt
app/: hid.py  js_to_hid.py  main.py  streaming.py
app/static/css/: style.css
app/static/js/: app.js
app/static/json/: tizen_config.json
app/templates/: index.html
